# wrs_tnk_robot

./: LICENSE
aizu_spider_tnk_description/: CMakeLists.txt  package.xml
aizu_spider_tnk_description/configs/: wrs.rviz
aizu_spider_tnk_description/launch/: display.launch  mapping.launch  test.launch
aizu_spider_tnk_description/urdf/: aizu_spider.urdf.xacro  aizu_spider_basic.urdf.xacro  aizu_spider_tnk.urdf.xacro  common.xacro  darm  warec
aizu_spider_tnk_description/urdf/CHASSIS/: -root-shape-0.dae  -root-shape-10.dae  -root-shape-11.dae  -root-shape-14.dae  -root-shape-15.dae  -root-shape-16.dae  -root-shape-17.dae  -root-shape-18.dae  -root-shape-19.dae  -root-shape-2.dae  -root-shape-21.dae  -root-shape-23.dae  -root-shape-24.dae  -root-shape-25.dae  -root-shape-26.dae  -root-shape-29.dae  -root-shape-30.dae  -root-shape-31.dae  -root-shape-32.dae  -root-shape-33.dae  -root-shape-34.dae  -root-shape-36.dae  -root-shape-37.dae  -root-shape-38.dae  -root-shape-42.dae  -root-shape-43.dae  -root-shape-44.dae  -root-shape-46.dae  -root-shape-47.dae  -root-shape-48.dae  -root-shape-5.dae  -root-shape-50.dae  -root-shape-51.dae  -root-shape-52.dae  -root-shape-54.dae  -root-shape-6.dae  -root-shape-7.dae  -root-shape-8.dae  CHASSIS.urdf  CHASSIS.urdf.xacro
aizu_spider_tnk_description/urdf/FLIPPER/: -root-shape-1.dae  -root-shape-2.dae  FLIPPER.urdf  FLIPPER.urdf.xacro
aizu_spider_tnk_description/urdf/LEDJ1-W/: LEDJ1-W.urdf
aizu_spider_tnk_description/urdf/MAIN_BELT/: -root-shape-0.dae  MAIN_BELT.urdf  MAIN_BELT.urdf.xacro
aizu_spider_tnk_description/urdf/MCM-4350FISH/: -root-shape-1.dae
aizu_spider_tnk_description/urdf/SUB_BELT/: SUB_BELT.urdf  SUB_BELT.urdf.xacro
aizu_spider_tnk_description/urdf/UTM-30LN/CHASSIS/: -root-shape-1.dae  -root-shape-12.dae  -root-shape-13.dae  -root-shape-20.dae  -root-shape-22.dae  -root-shape-27.dae  -root-shape-28.dae  -root-shape-3.dae  -root-shape-35.dae  -root-shape-39.dae  -root-shape-4.dae  -root-shape-40.dae  -root-shape-41.dae  -root-shape-45.dae  -root-shape-49.dae  -root-shape-53.dae  -root-shape-9.dae  CHASSIS.urdf
aizu_spider_tnk_description/urdf/UTM-30LN/FLIPPER/: -root-shape-0.dae
aizu_spider_tnk_description/urdf/UTM-30LN/LEDJ1-W/: -root-shape-0.dae
aizu_spider_tnk_description/urdf/UTM-30LN/MCM-4350FISH/: -root-shape-9.dae  MCM-4350FISH.urdf
aizu_spider_tnk_description/urdf/UTM-30LN/SUB_BELT/: -root-shape-0.dae
aizu_spider_tnk_description/urdf/WHEELS/: WHEELS.urdf.xacro
aizu_spider_tnk_description/urdf/sensors/: sensors.urdf.xacro
aizu_spider_tnk_description/urdf/sensors/ACC_SENSOR/: ACC_SENSOR.urdf.xacro
aizu_spider_tnk_description/urdf/sensors/LIDAR-VLP16/: LIDAR-VLP16.urdf.xacro
aizu_spider_tnk_description/urdf/sensors/MCM-4350FISH/: -root-shape-0.dae  -root-shape-2.dae  -root-shape-3.dae  -root-shape-5.dae  -root-shape-6.dae  (+4 more)
double_arm_tnk_description/: CMakeLists.txt  package.xml
double_arm_tnk_description/configs/: double_arm_tnk_control.yaml  wrs.rviz
double_arm_tnk_description/launch/: control.launch  display.launch  joint_state.launch  mapping.launch  test.launch
double_arm_tnk_description/meshes/: tframe_visual.stl
double_arm_tnk_description/urdf/: BASE.urdf.xacro  DoubleArmV7A-TNK.urdf  DoubleArmV7A-TNK.urdf.xacro  DoubleArmV7A-TNK_base.urdf.xacro  DoubleArmV7A.urdf.original  MANI_ARM.urdf.xacro  SENSOR.urdf.xacro  TOHOKU_ARM.urdf.xacro  common.xacro
jaco2_choreonoid_control/: CMakeLists.txt  package.xml
jaco2_choreonoid_control/cpp/: jaco2_choreonoid_control.cpp
jaco_tnk_description/: CMakeLists.txt  package.xml
jaco_tnk_description/configs/: wrs.rviz
jaco_tnk_description/launch/: mapping.launch
jaco_tnk_description/urdf/: .#jaco_basic.urdf.xacro  aaa.txt  aizu_spider.urdf.xacro  jaco_basic.urdf.xacro
kinova_description/launch/: display_kinova_robot.launch
kinova_description/urdf/: j2n6s300.xacro  j2n6s300_standalone.xacro  kinova_common.xacro
tps_base_link/: CMakeLists.txt  package.xml
tps_base_link/launch/: tps_base_link.launch
tps_base_link/src/: tps_base_link.cpp
wrs_tnk_robot/: CMakeLists.txt  package.xml
(+4 files in other folders)
