<?xml version="1.0"?>
<package>
  <name>tps_base_link</name>
  <version>0.1.3</version>
  <description>The tps_base_link package</description>

  <author email="groadpg@gmail.com">RyodoTanaka</author>
  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rqt_tf_tree</run_depend>
  <run_depend>rviz</run_depend>
</package>
